<resources>
    <string name="app_name">PicEdit Framework</string>
    <string name="pen">Pen</string>
    <string name="brush">Brush</string>
    <string name="magic_tool">Magic tool</string>
    <string name="stickers">Stickers</string>
    <string name="rotate">Rotate</string>
    <string name="text">Text</string>
    <string name="close">close</string>
    <string name="export">export</string>
    <string name="image">image</string>
    <string name="filter">FILTER</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="undo">undo</string>
    <string name="redo">redo</string>
</resources>