<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="true"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/gray_2"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/exit_framework"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/close"
            app:srcCompat="@drawable/exit_icon" />

        <ImageView
            android:id="@+id/menu_export_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/export"
            app:srcCompat="@drawable/export_icon" />

        <ImageView
            android:id="@+id/undo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/undo"
            app:srcCompat="@drawable/undo_icon" />

        <ImageView
            android:id="@+id/redo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/redo"
            app:srcCompat="@drawable/redo_icon" />

    </LinearLayout>


    <air.foi.hr.piceditview.PicEditView
        android:id="@+id/pic_edit_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="100dp"
        app:layout_constraintBottom_toTopOf="@+id/tool_picker"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_bar" />

    <LinearLayout
        android:id="@+id/tool_picker"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/gray_2"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/pen_tool"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/pen"
            app:srcCompat="@drawable/pen_icon" />

        <ImageView
            android:id="@+id/brush_tool"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/brush"
            app:srcCompat="@drawable/brush_icon" />

        <ImageView
            android:id="@+id/magic_wand_tool"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/magic_tool"
            app:srcCompat="@drawable/filter_icon" />

        <ImageView
            android:id="@+id/text_tool"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/text"
            app:srcCompat="@drawable/text_icon" />

        <ImageView
            android:id="@+id/rotate_tool"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/rotate"
            app:srcCompat="@drawable/rotate_icon" />

        <ImageView
            android:id="@+id/cut_tool"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@android:string/cut"
            app:srcCompat="@drawable/cut_icon" />

        <ImageView
            android:id="@+id/sticker_tool"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/stickers"
            app:srcCompat="@drawable/sticker_icon" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/frame_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>